--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -69,13 +69,13 @@ a {
   -webkit-border-radius: 6px;
 }
 html, body {
-  font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", "微软雅黑", sans-serif;
+  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 body {
   height: 100%; 
   width: 100%;
   line-height: 22px;
-  font-size: 12px;
+  font-size: 14px;
   overflow: hidden;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
