--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -40,9 +40,9 @@ textarea {
   display: none
 }
 
-body::-webkit-scrollbar {
-  display: none
-}
+// body::-webkit-scrollbar {
+//   display: none
+// }
  
 /* custom */
 a {
@@ -77,13 +77,11 @@ body {
   line-height: 22px;
   font-size: 14px;
   overflow: hidden;
+  overflow-y: auto;
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-html {
-  overflow-y: scroll;
-}
- 
+
 /*清除浮动*/
 .clearfix:before,
 .clearfix:after {
